# cane

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  graph.sh  meson.build
doc/: ideas.md  notation.md  syntax.ebnf  types.md
include/cane/: cane.h  cane.hpp  def.h  def.hpp  enum.h  enum.hpp  lex.h  lex.hpp  list.h  log.h  log.hpp  macro.hpp  mem.h  ops.hpp  parse.h  parse.hpp  passes.hpp  str.h  util.h  util.hpp  value.hpp  vec.h
src/: cane.c  cane.cpp
tests/: assert.c  die.c  die.cpp  fail.c  lexer.cpp  pass.c  vec.c
